--- a/src/index.html
+++ b/src/index.html
@@ -12,25 +12,25 @@
 </head>
 
 <body>
-	<img class="fixed-gift wow pulse infinite" src="assets/img/gift.png" alt="">
+	<img class="fixed-gift wow pulse infinite" src="./assets/img/gift.png" alt="">
 	<header id="up" class="header">
 		<div class="container">
 			<div class="col-md-2 col-sm-3 col-xs-6">
 				<button class="burger">
-					<img src="assets/img/burger.svg" alt=""><span>Product Catalog</span>
+					<img src="./assets/img/burger.svg" alt=""><span>Product Catalog</span>
 				</button>
 				<ul class="burger-menu">
 					<li>
-						<a href="#">Picture from your photo</a>
+						<a href="#styles">Picture from your photo</a>
 					</li>
 					<li>
-						<a href="#">Ready-made paintings</a>
+						<a href="#portfolio">Ready-made paintings</a>
 					</li>
 					<li>
-						<a href="#">Gift ideas</a>
+						<a href="#portfolio">Gift ideas</a>
 					</li>
 					<li>
-						<a href="#">For buyers</a>
+						<a href="#scheme">For buyers</a>
 					</li>
 				</ul>
 			</div>
@@ -72,7 +72,7 @@
 			</div>
 			<div class="col-md-2 col-md-offset-0 col-sm-3 col-sm-offset-6 col-xs-6">
 				<div class="button-wrap">
-					<button class="button button-order button-design">Order<img src="assets/img/button-right-arrow.svg"
+					<button class="button button-order button-design">Order<img src="./assets/img/button-right-arrow.svg"
 							alt=""></button>
 				</div>
 			</div>
@@ -95,18 +95,18 @@
 				</div>
 				<div class="col-md-3 col-sm-4 col-xs-7">
 					<p class="phone">8 800 234-23-34</p>
-					<p class="phone-whatsapp"><img class="icons" src="assets/img/telephone.svg" alt><img class="icons"
-							src="assets/img/whatsapp.svg" alt> +7 495 234-23-34</p>
+					<p class="phone-whatsapp"><img class="icons" src="./assets/img/telephone.svg" alt><img class="icons"
+							src="./assets/img/whatsapp.svg" alt> +1 985 234-23-34</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-7">
 					<div class="main-slider">
 						<div class="main-slider-item">
-							<img src="assets/img/main-1.png" alt>
+							<img src="./assets/img/main-1.png" alt>
 						</div>
 						<div class="main-slider-item">
-							<img src="assets/img/main-2.png" alt>
+							<img src="./assets/img/main-2.png" alt>
 						</div>
 					</div>
 				</div>
@@ -115,22 +115,22 @@
 					<h1 class="wow fadeInUp">Portrait on canvas</h1>
 					<div class="row">
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class="main-features"><img src="assets/img/checked.svg" alt>Minimum price guarantee</p>
+							<p class="main-features"><img src="./assets/img/checked.svg" alt>Minimum price guarantee</p>
 						</div>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class="main-features"><img src="assets/img/checked.svg" alt>30% cheaper than competitors</p>
+							<p class="main-features"><img src="./assets/img/checked.svg" alt>30% cheaper than competitors</p>
 						</div>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class="main-features"><img src="assets/img/checked.svg" alt>Up to 30% off when ordering from the
+							<p class="main-features"><img src="./assets/img/checked.svg" alt>Up to 30% off when ordering from the
 								website!</p>
 						</div>
 						<div class="col-md-6 col-md-offset-0 col-sm-6 col-sm-offset-3">
-							<p class="main-features"><img src="assets/img/checked.svg" alt>Urgent production in 3 hours!</p>
+							<p class="main-features"><img src="./assets/img/checked.svg" alt>Urgent production in 3 hours!</p>
 						</div>
 					</div>
 					<p class="p-button">Send a photo now and get a design in 1 hour</p>
 					<button class="button button-order button-design"><img class="button-order-img"
-							src="assets/img/button-arrow.png" alt>Order portrait</button>
+							src="./assets/img/button-arrow.png" alt>Order portrait</button>
 				</div>
 			</div>
 		</div>
@@ -139,7 +139,7 @@
 	<section class="promo">
 		<div class="container">
 			<div class="col-md-7">
-				<img class="promo-img" src="assets/img/promo-1.png" alt>
+				<img class="promo-img" src="./assets/img/promo-1.png" alt>
 			</div>
 			<div class="col-md-5">
 				<p>Simply send a photo and</p>
@@ -147,7 +147,7 @@
 				<button class="button button-order button-design">Order portrait design</button>
 			</div>
 		</div>
-		<img class="palette" src="assets/img/palette.png" alt>
+		<img class="palette" src="./assets/img/palette.png" alt>
 	</section>
 
 	<section class="styles" id="styles">
@@ -180,7 +180,7 @@
 			</div>
 			<button class="button button-transparent button-styles">See More Styles</button>
 		</div>
-		<img class="paints" src="assets/img/paints.png" alt>
+		<img class="paints" src="./assets/img/paints.png" alt>
 	</section>
 
 	<section class="card card-1 wow fadeIn">
@@ -188,7 +188,7 @@
 			<div class="card-block">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1">
-						<img src="assets/img/card-1.png" alt>
+						<img src="./assets/img/card-1.png" alt>
 					</div>
 					<div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1">
 						<div class="card-block-text">
@@ -246,7 +246,7 @@
 					</form>
 				</div>
 				<div class="col-md-4 col-md-offset-2 hidden-sm hidden-xs">
-					<img src="assets/img/calc-1.png" alt>
+					<img src="./assets/img/calc-1.png" alt>
 					<p class="calc-text">The proportional size of the image is calculated automatically. If you want to crop the
 						image or just find out the cost of the desired canvas size, uncheck the "Proportional" box</p>
 				</div>
@@ -270,34 +270,34 @@
 		</div>
 		<div class="portfolio-wrapper">
 			<div class="portfolio-block all girl">
-				<img src="assets/img/portfolio-1.jpg" alt>
+				<img src="./assets/img/portfolio-1.jpg" alt>
 			</div>
 			<div class="portfolio-block all girl">
-				<img src="assets/img/portfolio-2.jpg" alt>
+				<img src="./assets/img/portfolio-2.jpg" alt>
 			</div>
 			<div class="portfolio-block all lovers">
-				<img src="assets/img/portfolio-3.jpg" alt>
+				<img src="./assets/img/portfolio-3.jpg" alt>
 			</div>
 			<div class="portfolio-block all guy">
-				<img src="assets/img/portfolio-4.jpg" alt>
+				<img src="./assets/img/portfolio-4.jpg" alt>
 			</div>
 			<div class="portfolio-block all chef">
-				<img src="assets/img/portfolio-5.jpg" alt>
+				<img src="./assets/img/portfolio-5.jpg" alt>
 			</div>
 			<div class="portfolio-block all lovers">
-				<img src="assets/img/portfolio-6.jpg" alt>
+				<img src="./assets/img/portfolio-6.jpg" alt>
 			</div>
 			<div class="portfolio-block all lovers">
-				<img src="assets/img/portfolio-7.jpg" alt>
+				<img src="./assets/img/portfolio-7.jpg" alt>
 			</div>
 			<div class="portfolio-block all girl">
-				<img src="assets/img/portfolio-8.jpg" alt>
+				<img src="./assets/img/portfolio-8.jpg" alt>
 			</div>
 			<div class="portfolio-block all girl">
-				<img src="assets/img/portfolio-9.jpg" alt>
+				<img src="./assets/img/portfolio-9.jpg" alt>
 			</div>
 			<div class="portfolio-block all chef">
-				<img src="assets/img/portfolio-10.jpg" alt>
+				<img src="./assets/img/portfolio-10.jpg" alt>
 			</div>
 		</div>
 		<div class="container">
@@ -314,15 +314,15 @@
 					of your gift! Such a pleasant present will fit perfectly into the interior.</p>
 				<div class="gift-features">
 					<div class="col-sm-4">
-						<h4 class="wow swing" data-wow-delay="0.2s"><img class="gift-img-1" src="assets/img/gift-1.png" alt>Gift
+						<h4 class="wow swing" data-wow-delay="0.2s"><img class="gift-img-1" src="./assets/img/gift-1.png" alt>Gift
 							with taste</h4>
 					</div>
 					<div class="col-sm-4">
-						<h4 class="wow swing" data-wow-delay="0.4s"><img class="gift-img-2" src="assets/img/gift-2.png" alt>Always
+						<h4 class="wow swing" data-wow-delay="0.4s"><img class="gift-img-2" src="./assets/img/gift-2.png" alt>Always
 							trendy</h4>
 					</div>
 					<div class="col-sm-4">
-						<h4 class="wow swing" data-wow-delay="0.6s"><img class="gift-img-3" src="assets/img/gift-3.png" alt>Everyone
+						<h4 class="wow swing" data-wow-delay="0.6s"><img class="gift-img-3" src="./assets/img/gift-3.png" alt>Everyone
 							will be delighted</h4>
 					</div>
 				</div>
@@ -335,22 +335,22 @@
 			<p class="p-heading">Our advantages</p>
 			<h2>Why choose us?</h2>
 			<div class="col-md-4 col-sm-6 wow rotateIn" data-wow-delay="0.1s">
-				<h4><img class="features-img-1" src="assets/img/features-1.png" alt>Natural canvas and the best paints</h4>
+				<h4><img class="features-img-1" src="./assets/img/features-1.png" alt>Natural canvas and the best paints</h4>
 			</div>
 			<div class="col-md-4 col-sm-6 wow rotateIn" data-wow-delay="0.2s">
-				<h4><img class="features-img-2" src="assets/img/features-2.png" alt>Minimum price guarantee</h4>
+				<h4><img class="features-img-2" src="./assets/img/features-2.png" alt>Minimum price guarantee</h4>
 			</div>
 			<div class="col-md-4 col-sm-6 wow rotateIn" data-wow-delay="0.3s">
-				<h4><img class="features-img-3" src="assets/img/features-3.png" alt>Wide selection of decorative frames</h4>
+				<h4><img class="features-img-3" src="./assets/img/features-3.png" alt>Wide selection of decorative frames</h4>
 			</div>
 			<div class="col-md-4 col-sm-6 wow rotateIn" data-wow-delay="0.4s">
-				<h4><img class="features-img-4" src="assets/img/features-4.png" alt>Drawn by professional artists</h4>
+				<h4><img class="features-img-4" src="./assets/img/features-4.png" alt>Drawn by professional artists</h4>
 			</div>
 			<div class="col-md-4 col-sm-6 wow rotateIn" data-wow-delay="0.5s">
-				<h4><img class="features-img-5" src="assets/img/features-5.png" alt>Protection against aging up to 70 years</h4>
+				<h4><img class="features-img-5" src="./assets/img/features-5.png" alt>Protection against aging up to 70 years</h4>
 			</div>
 			<div class="col-md-4 col-sm-6 wow rotateIn" data-wow-delay="0.6s">
-				<h4><img class="features-img-6" src="assets/img/features-6.png" alt>Delivery to any part of the world</h4>
+				<h4><img class="features-img-6" src="./assets/img/features-6.png" alt>Delivery to any part of the world</h4>
 			</div>
 		</div>
 	</section>
@@ -361,26 +361,26 @@
 			<div class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
 				<div class="sizes-wrapper">
 					<div class="sizes-block">
-						<img class="size-1" src="assets/img/sizes-1.png" alt>
+						<img class="size-1" src="./assets/img/sizes-1.png" alt>
 						<p class="size">40x50</p>
 						<p class="starting-price">5 290 rub.</p>
 						<p class="final-price">3 670 rub.</p>
 					</div>
 					<div class="sizes-block">
-						<img class="size-2" src="assets/img/sizes-2.png" alt>
+						<img class="size-2" src="./assets/img/sizes-2.png" alt>
 						<p class="size">50x70</p>
 						<p class="starting-price">5 290 rub.</p>
 						<p class="final-price">3 670 rub.</p>
 					</div>
 					<div class="sizes-block">
-						<img class="size-3" src="assets/img/sizes-3.png" alt>
+						<img class="size-3" src="./assets/img/sizes-3.png" alt>
 						<p class="size">70x70</p>
 						<p class="starting-price">5 290 rub.</p>
 						<p class="final-price">3 670 rub.</p>
 						<p class="sizes-hit">Bestseller</p>
 					</div>
 					<div class="sizes-block">
-						<img class="size-4" src="assets/img/sizes-4.png" alt>
+						<img class="size-4" src="./assets/img/sizes-4.png" alt>
 						<p class="size">70x100</p>
 						<p class="starting-price">5 290 rub.</p>
 						<p class="final-price">3 670 rub.</p>
@@ -397,37 +397,37 @@
 			<div class="row">
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="scheme-block">
-						<img src="assets/img/scheme-1.png" alt>
+						<img src="./assets/img/scheme-1.png" alt>
 						<p>Send a photo and your wishes</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="scheme-block" style="position: relative; top: 1.3rem;">
-						<img src="assets/img/scheme-2.png" alt>
+						<img src="./assets/img/scheme-2.png" alt>
 						<p>We prepare design options considering your requirements</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="scheme-block">
-						<img src="assets/img/scheme-3.png" alt>
+						<img src="./assets/img/scheme-3.png" alt>
 						<p>You approve the layout and the artist starts working</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="scheme-block">
-						<img src="assets/img/scheme-4.png" alt>
+						<img src="./assets/img/scheme-4.png" alt>
 						<p>Choose a frame option and design</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="scheme-block">
-						<img src="assets/img/scheme-5.png" alt>
+						<img src="./assets/img/scheme-5.png" alt>
 						<p>Address and convenient delivery time are coordinated</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6 col-xs-12">
 					<div class="scheme-block" style="position: relative; top: -1.6rem;">
-						<img src="assets/img/scheme-6.png" alt>
+						<img src="./assets/img/scheme-6.png" alt>
 						<p>You pay the remaining amount to the courier upon receiving the canvas</p>
 					</div>
 				</div>
@@ -440,7 +440,7 @@
 			<div class="card-block">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-1 col-sm-4 col-sm-offset-1">
-						<img src="assets/img/card-2.jpg" alt>
+						<img src="./assets/img/card-2.jpg" alt>
 					</div>
 					<div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1">
 						<div class="card-block-text">
@@ -465,7 +465,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6">
-						<img src="assets/img/card-3.png" alt>
+						<img src="./assets/img/card-3.png" alt>
 					</div>
 				</div>
 			</div>
@@ -482,7 +482,7 @@
 						<button class="button button-order">Download Catalog</button>
 					</div>
 				</div>
-				<div class="col-md-7"><img src="assets/img/promo-2.png" alt></div>
+				<div class="col-md-7"><img src="./assets/img/promo-2.png" alt></div>
 			</div>
 		</div>
 	</section>
@@ -491,15 +491,15 @@
 		<div class="container">
 			<div class="feedback-slider" style="position:relative; height: 400px;">
 				<button class="main-slider-btn main-prev-btn">
-					<img src="assets/img/left-arr.png" alt="left">
+					<img src="./assets/img/left-arr.png" alt="left">
 				</button>
 				<button class="main-slider-btn main-next-btn">
-					<img src="assets/img/right-arr.png" alt="right">
+					<img src="./assets/img/right-arr.png" alt="right">
 				</button>
 				<div class="feedback-slider-item">
 					<div class="col-sm-5">
 						<div class="feedback-block">
-							<img src="assets/img/feedback-1.png" alt>
+							<img src="./assets/img/feedback-1.png" alt>
 							<button class="button button-order button-design">I want the same</button>
 						</div>
 					</div>
@@ -515,7 +515,7 @@
 				<div class="feedback-slider-item">
 					<div class="col-sm-5">
 						<div class="feedback-block">
-							<img src="assets/img/feedback-2.jpg" alt>
+							<img src="./assets/img/feedback-2.jpg" alt>
 							<button class="button button-order button-design">I want the same</button>
 						</div>
 					</div>
@@ -530,7 +530,7 @@
 				<div class="feedback-slider-item">
 					<div class="col-sm-5">
 						<div class="feedback-block">
-							<img src="assets/img/feedback-3.jpg" alt>
+							<img src="./assets/img/feedback-3.jpg" alt>
 							<button class="button button-order button-design">I want the same</button>
 						</div>
 					</div>
@@ -549,7 +549,7 @@
 
 	<section class="often-questions" id="often-questions">
 		<div class="container">
-			<img class="spirt" src="assets/img/spirt.png" alt>
+			<img class="spirt" src="./assets/img/spirt.png" alt>
 			<p class="p-heading">Frequently Asked Questions</p>
 			<h2>Answering any of your questions</h2>
 			<div id="accordion">
@@ -593,7 +593,7 @@
 					</p>
 				</div>
 			</div>
-			<img class="brushes" src="assets/img/brushes.png" alt>
+			<img class="brushes" src="./assets/img/brushes.png" alt>
 		</div>
 	</section>
 
@@ -601,7 +601,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<img class="promo-img" src="assets/img/promo-3.png" alt>
+					<img class="promo-img" src="./assets/img/promo-3.png" alt>
 				</div>
 				<div class="col-md-5">
 					<p>Simply send a photo and</p>
@@ -669,7 +669,7 @@
 					<p class="phone">8 800 234-23-34</p>
 				</div>
 				<div class="col-md-12 col-sm-4 col-xs-12">
-					<p class="phone-whatsapp">+7 495 234-23-34</p>
+					<p class="phone-whatsapp">+1 985 234-23-34</p>
 				</div>
 				<div class="col-md-12 col-sm-4 col-xs-12">
 					<p>24/7, no weekends</p>
@@ -701,7 +701,7 @@
 			<div class="popup-content">
 				<button class="popup-close">&times;</button>
 				<h2>We have a gift for you!</h2>
-				<img src="assets/img/gift.png" alt="">
+				<img src="./assets/img/gift.png" alt="">
 				<p>Enter the promo code IWANTPOPART and get a 30% discount on a portrait of any size in the pop-art style!</p>
 			</div>
 		</div>
@@ -710,12 +710,12 @@
 		<div class="popup-dialog">
 			<div class="popup-content">
 				<button class="popup-close">&times;</button>
-				<form action="#" enctype="multipart/form-data">
+				<form action="#" method="POST" enctype="multipart/form-data">
 					<h4>Order portrait design</h4>
 					<div class="file_upload">
 						<button type="button">Upload photo</button>
 						<div>File not selected</div>
-						<input type="file" name="upload">
+						<input type="file" name="upload" accept="image/*">
 					</div>
 					<div class="main-form">
 						<div class="form">
